--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       body{
         text-align: center;
+        background-color:purple;
       }
     </style>
   </head>
@@ -12,6 +13,6 @@
     <br>
     <h1>He is very cool!</h1>
     <br>
-    <h1 style="color:purple">He is purple</h1>
+    <h1>He is purple</h1>
   </body>
 </html>
